test/invalidwiki/Еще одна страница/__page.opt
[General]
tags = test, тест
type = unknown
